added docs.html link to index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link active inv-color" href="#" style="color:#E3E4E8;">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link inv-color" style="color:#E3E4E8" target="_blank" rel="noopener noreferrer" href="https://fawzievera.github.io/Evera.docs/">Developers</a>
+        <a class="nav-item nav-link inv-color" style="color:#E3E4E8" target="_blank" rel="noopener noreferrer" href="docs.html">Developers</a>
         <a class="nav-item nav-link inv-color" style="color:#E3E4E8" href="#contact">Contact</a>
       </div>
     </div>
